<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="search_title">Поиск</string>
    <string name="library_title">Медиатека</string>
    <string name="settings_title">Настройки</string>
    <string name="playlist_maker_header">Playlist maker</string>
    <string name="dark_theme_menu">Тёмная тема</string>
    <string name="share_menu">Поделиться приложением</string>
    <string name="support_menu">Написать в поддержку</string>
    <string name="user_agreement_menu">Пользовательское соглашение</string>
    <string name="input_hint">Поиск</string>
    <string name="support_email_value">patrick.delroy.yohoho@gmail.com</string>
    <string name="share_url_value">https://practicum.yandex.kz/learn/android-developer-plus/courses/</string>
    <string name="support_message_default_subject_value">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="support_message_default_text_value">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="user_agreement_url_value">https://yandex.ru/legal/practicum_offer/</string>
    <string name="refresh">Обновить</string>
    <string name="network_error_text">Проблемы со связью.\n\nЗагрузка не удалась. Проверьте\nподключение к интернету</string>
    <string name="empty_song_list_error_text">Ничего не нашлось</string>
    <string name="search_history_title">Вы искали</string>
    <string name="clear_history_button">Очистить историю</string>
    <string name="media_info_country">Страна</string>
    <string name="media_info_genre">Жанр</string>
    <string name="media_info_year">Год</string>
    <string name="media_info_album">Альбом</string>
    <string name="media_info_length">Длительность</string>
    <string name="start_time_zero">0:00</string>
    <string name="placeholder_fav_message">Ваша медиатека пуста</string>
    <string name="placeholder_playlists_message">Вы не создали ни одного плэйлиста</string>
    <string name="new_playlist_button">Новый плейлист</string>
    <string name="playlists_tab_title">Плейлисты</string>
    <string name="fav_tracks_tab_title">Избранные треки</string>
    <string name="main_title">Main</string>
    <string name="playlist_toolbar_title_text">Новый плейлист</string>
    <string name="add_to_playlist_bottomsheet_title">Добавить в плейлист</string>
    <string name="create_playlist_button_text">Создать</string>
    <string name="playlist_description_hint_text">Описание</string>
    <string name="playlist_name_hint_text">Название*</string>
    <string name="playlit_editing_dialog_title">Завершить создание плейлиста?</string>
    <string name="playlist_save_dialog_subtitle">Все несохраненные данные будут потеряны</string>
    <string name="cancel">Отмена</string>
    <string name="finish">Завершить</string>
    <string name="edit_playlist_info_text">Редактировать информацию</string>
    <string name="share_text">Поделиться</string>
    <string name="delete_playlist_text">Удалить плейлист</string>
    <string name="edit_playlist_title_text">Редактировать</string>
    <string name="save_common_text">Сохранить</string>
    <string name="playlist_name_cannot_be_empty_text">Название плейлиста не может быть пустым</string>
    <string name="yes_common_text">ДА</string>
    <string name="no_common_text">НЕТ</string>
    <string name="ok_common_text">Ok</string>
    <string name="no_tracks_to_share_text">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="wanna_delete_this_track_text">Хотите удалить трек?</string>
    <string name="no_tracks_in_playlist_text">В плейлисте нет ни одного трека</string>
    <string name="notification_title">Playlist Maker</string>
    <string name="tracks_several">" треков"</string>
</resources>