<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:id="@+id/fragment_settings_view"
    android:layout_height="match_parent">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    style="@style/background"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/settings_toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/header_height"
        android:orientation="horizontal"
        app:navigationIcon="@drawable/arrow_back"
        app:title="@string/settings_title"
        android:titleTextAppearance="@style/toolbar_title_text">
    </com.google.android.material.appbar.MaterialToolbar>
    <com.google.android.material.switchmaterial.SwitchMaterial
        style="@style/settings_menu_item"
        android:id="@+id/setting_item_dark_theme"
        app:thumbTint="@color/switch_thumb_color"
        app:trackTint="@color/switch_track_color"
        android:layout_marginTop="@dimen/button_margin_top"
        android:text="@string/dark_theme_menu"
        android:thumbTintMode="screen"/>
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/setting_item_share"
        style="@style/settings_menu_item"
        android:drawableEnd="@drawable/share"
        android:text="@string/share_menu" />
    <com.google.android.material.textview.MaterialTextView
        style="@style/settings_menu_item"
        android:id="@+id/setting_item_contact_support"
        android:drawableEnd="@drawable/support"
        android:text="@string/support_menu" />
    <com.google.android.material.textview.MaterialTextView
        style="@style/settings_menu_item"
        android:id="@+id/setting_item_user_agreement"
        android:drawableEnd="@drawable/arrow_forward"
        android:text="@string/user_agreement_menu" />
</LinearLayout>
</FrameLayout>