<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/fragment_main_view"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.main.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_color"
        android:orientation="vertical">
        <com.google.android.material.appbar.MaterialToolbar
            android:layout_width="@dimen/header_width"
            android:layout_height="@dimen/header_height"
            android:titleMarginStart="@dimen/header_text_margin_start"
            android:titleMarginTop="@dimen/header_text_margin_top"
            android:titleTextAppearance="@style/toolbar_title_text"
            app:title="@string/playlist_maker_header"></com.google.android.material.appbar.MaterialToolbar>
        <Button
            android:id="@+id/search_button"
            style="@style/main_button_style"
            android:text="@string/search_title"
            app:icon="@drawable/search" />
        <Button
            android:id="@+id/media_button"
            style="@style/main_button_style"
            android:text="@string/library_title"
            app:icon="@drawable/library" />
        <Button
            android:id="@+id/settings_button"
            style="@style/main_button_style"
            android:text="@string/settings_title"
            app:icon="@drawable/settings" />
    </LinearLayout>
</FrameLayout>