<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fragment_media_view"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.track.TrackFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/background"
    android:fillViewport="true">
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.track.TrackActivity">
    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/media_toolbar"
        app:navigationIcon="@drawable/arrow_back"
        android:layout_width="match_parent"
        android:layout_height="@dimen/header_height"
        android:orientation="horizontal">
    </com.google.android.material.appbar.MaterialToolbar>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/left_border"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/media_horizontal_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/right_border"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/media_horizontal_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <ImageView
        android:id="@+id/media_track_cover"
        android:layout_width="@dimen/player_track_dimension"
        android:layout_height="@dimen/player_track_dimension"
        android:background="@drawable/media_cover_background"
        android:layout_marginTop="26dp"
        app:layout_constraintBottom_toTopOf="@id/media_track_title"
        app:layout_constraintEnd_toEndOf="@id/right_border"
        app:layout_constraintStart_toStartOf="@id/left_border"
        app:layout_constraintTop_toBottomOf="@id/media_toolbar"></ImageView>

    <TextView
        android:id="@+id/media_track_title"
        android:text = "Test test track title (Remastered 2009)"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        style="@style/media_song_title"
        app:layout_constraintStart_toStartOf="@id/left_border"
        app:layout_constraintTop_toBottomOf="@id/media_track_cover"></TextView>

    <TextView
        android:id="@+id/media_track_artist"
        style="@style/media_song_subtitle"
        android:text = "Govno govna"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toStartOf="@id/left_border"
        app:layout_constraintTop_toBottomOf="@id/media_track_title"></TextView>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/media_top_border_buttons"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="501dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/media_button_add"
        android:background="@drawable/media_add"
        style="@style/media_small_round_button"
        app:layout_constraintTop_toBottomOf="@id/media_top_border_buttons"
        app:layout_constraintStart_toStartOf="@id/left_border"
        app:layout_constraintEnd_toStartOf="@id/media_button_play"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        ></androidx.appcompat.widget.AppCompatButton>

    <com.example.playlistmaker.ui.track.ButtonPlay
        android:layout_height="wrap_content"
        android:id="@+id/media_button_play"
        app:playButtonState="play"
        app:layout_constraintTop_toBottomOf="@id/media_top_border_buttons"
        android:layout_width="@dimen/media_round_button_big_button_size"
        android:layout_margin="6dp"
        app:layout_constraintStart_toEndOf="@id/media_button_add"
        app:layout_constraintEnd_toStartOf="@id/media_button_like"
        app:layout_constraintHorizontal_chainStyle="spread_inside"/>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/media_button_like"
        style="@style/media_small_round_button"
        android:background="@drawable/media_like"
        app:layout_constraintTop_toBottomOf="@id/media_top_border_buttons"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toEndOf="@id/media_button_play"
        app:layout_constraintEnd_toEndOf="@id/right_border">
    </androidx.appcompat.widget.AppCompatButton>

    <TextView
        android:id="@+id/media_track_time"
        android:text="0:00"
        style="@style/media_time_text"
        app:layout_constraintTop_toBottomOf="@id/media_button_play"
        app:layout_constraintStart_toStartOf="@id/left_border"
        app:layout_constraintEnd_toEndOf="@id/right_border"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"></TextView>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/left_border_16"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/media_horizontal_guideline_16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/right_border_16"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/media_horizontal_guideline_16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/media_info_length"
        android:text="@string/media_info_length"
        style="@style/media_info_element"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/media_track_time"
        app:layout_constraintStart_toStartOf="@id/left_border_16">
    </com.google.android.material.textview.MaterialTextView>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/media_info_length_value"
        android:text="5:35"
        style="@style/media_info_value"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/media_track_time"
        app:layout_constraintEnd_toEndOf="@id/right_border_16">
    </com.google.android.material.textview.MaterialTextView>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/media_info_album"
        android:text="@string/media_info_album"
        style="@style/media_info_element"
        app:layout_constraintStart_toStartOf="@id/left_border_16"
        app:layout_constraintTop_toBottomOf="@id/media_info_length">
    </com.google.android.material.textview.MaterialTextView>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/media_info_album_value"
        android:text="elkfnlke"
        style="@style/media_info_value"
        app:layout_constraintTop_toBottomOf="@id/media_info_length_value"
        app:layout_constraintEnd_toEndOf="@id/right_border_16">
    </com.google.android.material.textview.MaterialTextView>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/media_info_year"
        style="@style/media_info_element"
        android:text="@string/media_info_year"
        app:layout_constraintStart_toStartOf="@id/left_border_16"
        app:layout_constraintTop_toBottomOf="@id/media_info_album">
    </com.google.android.material.textview.MaterialTextView>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/media_info_year_value"
        android:text="elkfnlke"
        style="@style/media_info_value"
        app:layout_constraintTop_toBottomOf="@id/media_info_album_value"
        app:layout_constraintEnd_toEndOf="@id/right_border_16">
    </com.google.android.material.textview.MaterialTextView>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/media_info_genre"
        android:text="@string/media_info_genre"
        style="@style/media_info_element"
        app:layout_constraintStart_toStartOf="@id/left_border_16"
        app:layout_constraintTop_toBottomOf="@id/media_info_year">
    </com.google.android.material.textview.MaterialTextView>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/media_info_genre_value"
        android:text="elkfnlke"
        style="@style/media_info_value"
        app:layout_constraintTop_toBottomOf="@id/media_info_year_value"
        app:layout_constraintEnd_toEndOf="@id/right_border_16">
    </com.google.android.material.textview.MaterialTextView>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/media_info_country"
        android:text="@string/media_info_country"
        style="@style/media_info_element"
        app:layout_constraintStart_toStartOf="@id/left_border_16"
        app:layout_constraintTop_toBottomOf="@id/media_info_genre">
    </com.google.android.material.textview.MaterialTextView>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/media_info_country_value"
        android:text="elkfnlke"
        style="@style/media_info_value"
        app:layout_constraintTop_toBottomOf="@id/media_info_genre_value"
        app:layout_constraintEnd_toEndOf="@id/right_border_16">
    </com.google.android.material.textview.MaterialTextView>
</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
    <LinearLayout
        tools:visibility="gone"
        android:id="@+id/playlist_bottom_sheet"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/settings_background_color"
        android:orientation="vertical"
        android:paddingHorizontal="16dp"
        app:behavior_hideable="true"
        app:behavior_peekHeight="240dp"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:background="@drawable/bottomsheet_strike"></ImageView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:layout_marginTop="34dp"
            android:text="@string/add_to_playlist_bottomsheet_title"
            android:textColor="@color/arrow_back_icon"
            android:fontFamily="@font/ys_display_bold"
            android:textSize="19sp"
            android:textFontWeight="500"
            android:textStyle="bold" />

        <Button
            app:backgroundTint="@color/button_background"
            android:textColor="@color/button_text"
            style="@style/new_playlist_button"
            android:id="@+id/new_playlist_button_bottom_sheet"
            android:layout_gravity="center"
            android:text="@string/new_playlist_button"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/ys_display_medium"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="@id/right_border"
            app:layout_constraintStart_toStartOf="@id/left_border"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </Button>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/playlist_bottom_sheet_list_recycler"
            android:layout_width="match_parent"
            android:layout_marginTop="24dp"
            android:layout_height="wrap_content">
        </androidx.recyclerview.widget.RecyclerView>

    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout >